Initial commit, grpc for query-service
