# proto-gen/openapi/api_v2.swagger.json
@@ -66,9 +66,44 @@
           "CollectorService"
         ]
       }
+    },
+    "/api/v2/traces/{Id}": {
+      "post": {
+        "operationId": "GetTrace",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/api_v2GetTraceResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "Id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "QueryService"
+        ]
+      }
     }
   },
   "definitions": {
+    "TraceProcessMapping": {
+      "type": "object",
+      "properties": {
+        "process_id": {
+          "type": "string"
+        },
+        "process": {
+          "$ref": "#/definitions/api_v2Process"
+        }
+      }
+    },
     "api_v2Batch": {
       "type": "object",
       "properties": {
@@ -80,6 +115,14 @@
         },
         "process": {
           "$ref": "#/definitions/api_v2Process"
+        }
+      }
+    },
+    "api_v2GetTraceResponse": {
+      "type": "object",
+      "properties": {
+        "trace": {
+          "$ref": "#/definitions/api_v2Trace"
         }
       }
     },
@@ -318,6 +361,29 @@
         "FOLLOWS_FROM"
       ],
       "default": "CHILD_OF"
+    },
+    "api_v2Trace": {
+      "type": "object",
+      "properties": {
+        "spans": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/api_v2Span"
+          }
+        },
+        "process_map": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/TraceProcessMapping"
+          }
+        },
+        "warnings": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
     },
     "api_v2ValueType": {
       "type": "string",
